initial 1.21.1 update